--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -3,19 +3,35 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card class="welcome-card">
+    <ion-img src="/assets/books.sgv"></ion-img>
+    <ion-card-header>
+      <ion-card-subtitle>Empezemos!</ion-card-subtitle>
+      <ion-card-title>Bienvenidos a Colegio-Ionic</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <p>
+        ColegioApp! es una aplicacion que permite administrar la matricula de los
+        estudiantes de cualquier institucion privada.
+      </p>
+    </ion-card-content>
+  </ion-card>
+  <ion-list lines="none">
+    <ion-list-header>
+      <ion-label>Recursos</ion-label>
+    </ion-list-header>
+    <ion-item [routerLink]="'/estudiantes'">
+      <ion-icon slot="start" color="medium" name="book"></ion-icon>
+      <ion-label>Estudiantes</ion-label>
+    </ion-item>
+    <ion-item href="https://ionicframework.com/docs/building/scaffolding">
+      <ion-icon slot="start" color="medium" name="list"></ion-icon>
+      <ion-label>Cursos</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
